derive_builder/tests/compile-fail/crate_root.stderr
error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use std::option;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
  |
1 + use std::option::Option;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use std::result;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
  |
1 + use std::clone::Clone;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
1 + use std::fmt::Result;
  |
1 + use std::io::Result;
  |
1 + use std::result::Result;
  |
1 + use std::thread::Result;
  |
    and 3 other candidates

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
  |
1 + use std::convert::Into;
  |

error[E0433]: failed to resolve: could not find `UninitializedFieldError` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `UninitializedFieldError` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 + use derive_builder::UninitializedFieldError;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait
  |
1 + use std::default::Default;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use std::default;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use std::string;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use std::convert;
  |

error[E0412]: cannot find type `UninitializedFieldError` in module `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ not found in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 + use derive_builder::UninitializedFieldError;
  |

error[E0433]: failed to resolve: could not find `export` in `empty`
 --> tests/compile-fail/crate_root.rs:7:10
  |
7 | #[derive(Builder)]
  |          ^^^^^^^ could not find `export` in `empty`
  |
  = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use std::fmt;
  |

error[E0277]: `BadCrateBuilderError` doesn't implement `std::fmt::Display`
  --> tests/compile-fail/crate_root.rs:12:8
   |
12 | struct BadCrate {
   |        ^^^^^^^^ the trait `std::fmt::Display` is not implemented for `BadCrateBuilderError`
   |
note: required by a bound in `std::error::Error`
  --> $RUST/core/src/error.rs
